Added the call to action section along with the footer

--- a/style.css
+++ b/style.css
@@ -43,12 +43,13 @@ main > div {
     margin: 1em 0;
 }
 
-#heading-button {
+button {
     width: 8em;
     padding: 0.8em 0.5em;
     border-radius: 8px;
     border: none;
-    background-color: blue;
+    background-color: #068fff;
+    font-size: 1em;
 }
 
 #hero-text {
@@ -98,7 +99,7 @@ main > div:nth-child(2) > h1 {
     display: block;
     height: 10em;
     width: 10em;
-    border: 5px solid rgb(0, 191, 255);
+    border: 5px solid #068fff;
     border-radius: 15px;
 }
 
@@ -131,4 +132,32 @@ main > div:nth-child(3) > span {
     font-size: 1.6em;
     font-weight: 600;
     margin-top: 1em;
+}
+
+#call-to-action {
+    width: 100%;
+    height: 30%;
+    background-color: #068fff;
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    font-size: 1.2em;
+    border-radius: 15px;
+}
+
+#call-to-action > button {
+    border: 2px solid white;
+    background-color: #068fff;
+}
+
+footer {
+    height: 8em;
+    background-color: #242475;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+footer > span {
+    font-size: 1.5em;
 }
